css fix align in mobilemode

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -145,8 +145,9 @@ h2{
     flex-wrap: wrap;
     text-align: center;
     gap: 30px;
+   
     margin-top: 30px;
-    width: 100%;
+    width: auto;
     padding: 10px;
 
     .decorationLine{
@@ -157,7 +158,7 @@ h2{
         background: -webkit-radial-gradient(circle, rgba(216,112,147,1) 8%, rgba(0,0,0,1) 100%);
         background: radial-gradient(circle, rgba(216,112,147,1) 8%, rgba(0,0,0,1) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d87093",endColorstr="#000000",GradientType=1);
-        margin: 10px;
+        margin: 0px;
     }
 
     .arbetsprovContainer{
@@ -283,7 +284,7 @@ h2{
 /////////////////////////////////////////////////////////////////////////////
 
 footer {
-
+    margin-top: 40px;
     padding-top: 25px;
     height: 15%;
     width: 100vw;
